added an id for the timer in the html.  I'm going to try and tackle the timer first because a lot seems to revovle around it.  I'm unclear if I should have more than 1 html file or not, but hopefully that will get sorted out as I move along

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <p>View High Scores</p>
-            <p>Timer</p>
+            <p id="timer">Timer</p>
         </nav>
     </header>
 
