added a start button to the html document

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         
         <p>Try to answer the questions before the time runs out.  If you select the wrong answer the time will be reduced</p>
 
+        <button>Start Quiz</button>
+
         <ol>
             <li>Button Answer 1</li>
             <li>Button Answer 2</li>
