added some more pseudo for how I want to do the user input at the end.

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <main>
         <h1></h1>
         
-        <p>Try to answer the questions before the time runs out.  If you select the wrong answer the time will be reduced</p>
+        <p id="question"></p>
 
         <button>Start Quiz</button>
 
         <ol>
-            <li>Button Answer 1</li>
-            <li>Button Answer 2</li>
-            <li>Button Answer 3</li>
+            <li></li>
+            <li></li>
+            <li></li>
             <li>Button Answer 4</li>
         </ol>
 
