--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
 
         <button>Start Quiz</button>
 
+        <form>
+            <div>
+                <h3>All Done!</h3>
+                <p>Your final score is ____</p>
+            </div>
+            <input id="initials" placeholder="Please Enter Your Initials"/>
+        </form>
+
         <ol>
             <li></li>
             <li></li>
