some updates.  Had help from my tutor Joem

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
         <form>
             <div>
                 <h3>All Done!</h3>
-                <p>Your final score is ____</p>
+                <p id="final-score"></p>
             </div>
             <input id="initials" placeholder="Please Enter Your Initials"/>
+            <button id="submit">Sumbit</button>
         </form>
 
         <ol>
@@ -40,6 +41,18 @@
 
         <p>Correct!/Incorrect</p>
     </main>
+    <script>
+        // AND -> && -> if atleast one is false, then the overall result is false
+
+        // OR -> || -> if atleast one is true, then the overall is true
+
+        // NOT -> !
+ 
+
+        if(true && !(false && true)) {
+            console.log("Hello world!")
+        }
+    </script>
 
     <script src="./assets/script.js"></script>
 
