working on the iteration of the questions and answers.  I can see some progress using the console

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
         <h1></h1>
         
         <p id="question"></p>
+        <ul>
+            <li><button id="ans1"></button></li>
+            <li><button id="ans2"></button></li>
+            <li><button id="ans3"></button></li>
+            <li><button id="ans4"></button></li>
+        </ul>
 
         <button>Start Quiz</button>
 
@@ -30,12 +36,7 @@
             <button id="submit">Sumbit</button>
         </form>
 
-        <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li>Button Answer 4</li>
-        </ol>
+        
 
         <hr>
 
