The quiz function is working now and my questions an answers are displaying properly.  I also set the start quiz button to start the timer and present a question and answers when pressed.  Lots of help from TAs, tutor, and classmates

--- a/index.html
+++ b/index.html
@@ -18,14 +18,11 @@
         <h1></h1>
         
         <p id="question"></p>
-        <ul>
-            <li><button id="ans1"></button></li>
-            <li><button id="ans2"></button></li>
-            <li><button id="ans3"></button></li>
-            <li><button id="ans4"></button></li>
+        <ul id="choices">
+           
         </ul>
 
-        <button>Start Quiz</button>
+        <button id="start">Start Quiz</button>
 
         <form>
             <div>
