--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -22,15 +23,15 @@
            
         </ul>
 
-        <button id="start">Start Quiz</button>
+        <button id="start" class="show">Start Quiz</button>
 
-        <form>
+        <form id="myForm" class="hide">
             <div>
                 <h3>All Done!</h3>
                 <p id="final-score"></p>
             </div>
-            <input id="initials" placeholder="Please Enter Your Initials"/>
-            <button id="submit">Sumbit</button>
+            <input name="initials" id="initials" placeholder="Please Enter Your Initials"/>
+            <button id="submit">Submit</button>
         </form>
 
         
