--- a/scores.html
+++ b/scores.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>All Time Scores</h1>
+    <ul id="scores"></ul>
+
+
     <script src="./assets/scores.js"></script>
 </body>
 </html>
