--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <p>View High Scores</p>
+            <a href="scores.html">View High Scores</a>
             <p id="timer">Time</p>
         </nav>
     </header>
@@ -38,7 +38,7 @@
 
         <hr>
 
-        <p>Correct!/Incorrect</p>
+        <!-- <p>Correct!/Incorrect</p> -->
     </main>
 
     <script src="./assets/script.js"></script>
