--- a/scores.html
+++ b/scores.html
@@ -10,6 +10,10 @@
     <h1>All Time Scores</h1>
     <ul id="scores"></ul>
 
+    <form action="index.html">
+        <input type="submit" value="Go Back" />
+    </form>
+    
 
     <script src="./assets/scores.js"></script>
 </body>
