made the navbar with the timer and highscore link a flexbox

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="navbar">
             <a href="scores.html">View High Scores</a>
             <p id="timer">Time</p>
         </nav>
