added hover styling to scores link and hide/show to h1 element

--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style.css">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Space+Mono&display=swap" rel="stylesheet">
     <title>Code Quiz</title>
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <a href="scores.html">View High Scores</a>
+            <a href="scores.html">View All Time Scores</a>
             <p id="timer">Time</p>
         </nav>
     </header>
 
     <main>
-        <h1></h1>
+        <h1 class="show">Welcome To The Code Quiz</h1>
         
         <p id="question"></p>
         <ul id="choices">
