--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <h1 class="show">Welcome To The Code Quiz</h1>
         
-        <p id="question"></p>
+        <p id="question">To start the quiz click the "Start Quiz" button.  Once the start button is clicked you will have 90 seconds to finish the quiz.  You will be taking through a series of multiple choice questions.  If you select the wrong answer 15 seconds will be deducted from the timer.  The quiz ends when all the questions are finished or the timer ends.  At the end you will be able to add your initials and save your score.</p>
         <ul id="choices">
            
         </ul>
