added styling to scores page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h3>All Done!</h3>
                 <p id="final-score"></p>
             </div>
-            <input name="initials" id="initials" placeholder="Please Enter Your Initials"/>
+            <input name="initials" id="initials" placeholder="Enter Your Initials"/>
             <button id="submit">Submit</button>
         </form>
 
