--- a/scores.html
+++ b/scores.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./assets/style.css">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Space+Mono&display=swap" rel="stylesheet">
+    <title>Code Quiz - All Time Scores</title>
 </head>
 <body>
     <h1>All Time Scores</h1>
     <ul id="scores"></ul>
 
     <form action="index.html">
-        <input type="submit" value="Go Back" />
+        <input type="submit" value="Go Back"/>
+        <button type="button" id="clear">Clear Scores</button>
     </form>
     
 
