--- a/scores.html
+++ b/scores.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./assets/style.css">
+        <link rel="stylesheet" href="./assets/css/style.css">
         <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Space+Mono&display=swap" rel="stylesheet">
@@ -25,7 +25,7 @@
 
         </form>
 
-        <script src="./assets/scores.js"></script>
+        <script src="./assets/js/scores.js"></script>
 
     </body>
 </html>
