--- a/scores.html
+++ b/scores.html
@@ -25,7 +25,7 @@
 
         </form>
 
-        <script src="./assets/js/scores.js"></script>
+        <script src="./assets/scores.js"></script>
 
     </body>
 </html>
